--- a/package.json
+++ b/package.json
@@ -1,23 +1,34 @@
 {
-  "name": "paramtech-case",
-  "version": "1.0.0",
-  "main": "expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "expo": "~51.0.8",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
-  },
-  "private": true
+	"name": "paramtech-case",
+	"version": "1.0.0",
+	"main": "expo/AppEntry.js",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web"
+	},
+	"dependencies": {
+		"@react-navigation/native": "^6.1.17",
+		"@react-navigation/stack": "^6.3.29",
+		"axios": "^1.7.1",
+		"expo": "~51.0.8",
+		"expo-font": "~12.0.5",
+		"expo-linear-gradient": "~13.0.2",
+		"expo-status-bar": "~1.12.1",
+		"react": "18.2.0",
+		"react-native": "0.74.1",
+		"react-native-gesture-handler": "~2.16.1",
+		"react-native-reanimated": "~3.10.1",
+		"react-native-safe-area-context": "4.10.1",
+		"react-native-screens": "3.31.1",
+		"react-native-svg": "15.2.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.20.0",
+		"@types/react": "~18.2.45",
+		"prettier": "3.2.5",
+		"typescript": "^5.1.3"
+	},
+	"private": true
 }
