--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
 		"web": "expo start --web"
 	},
 	"dependencies": {
+		"@gorhom/bottom-sheet": "^4",
 		"@react-navigation/native": "^6.1.17",
 		"@react-navigation/stack": "^6.3.29",
+		"@reduxjs/toolkit": "^2.2.5",
 		"axios": "^1.7.1",
 		"expo": "~51.0.8",
 		"expo-font": "~12.0.5",
@@ -22,7 +24,9 @@
 		"react-native-reanimated": "~3.10.1",
 		"react-native-safe-area-context": "4.10.1",
 		"react-native-screens": "3.31.1",
-		"react-native-svg": "15.2.0"
+		"react-native-svg": "15.2.0",
+		"react-native-uuid": "^2.0.2",
+		"react-redux": "^9.1.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
