--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@gorhom/bottom-sheet": "^4",
+		"@react-native-async-storage/async-storage": "^1.23.1",
 		"@react-navigation/native": "^6.1.17",
 		"@react-navigation/stack": "^6.3.29",
 		"@reduxjs/toolkit": "^2.2.5",
@@ -17,8 +18,11 @@
 		"expo": "~51.0.8",
 		"expo-font": "~12.0.5",
 		"expo-linear-gradient": "~13.0.2",
+		"expo-localization": "~15.0.3",
 		"expo-status-bar": "~1.12.1",
+		"i18next": "^23.11.5",
 		"react": "18.2.0",
+		"react-i18next": "^14.1.2",
 		"react-native": "0.74.1",
 		"react-native-gesture-handler": "~2.16.1",
 		"react-native-reanimated": "~3.10.1",
