chore: add cloud url to env sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,2 @@
 EXPO_PUBLIC_BASE_URL=https://664cb006ede9a2b556513515.mockapi.io/api/v1/
+EXPO_PUBLIC_CLOUD_URL=https://address-api-mugriowe3a-ey.a.run.app/api/v1/
