--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"react-i18next": "^14.1.2",
 		"react-native": "0.74.1",
 		"react-native-gesture-handler": "~2.16.1",
+		"react-native-keyboard-accessory": "^0.1.16",
 		"react-native-reanimated": "~3.10.1",
 		"react-native-safe-area-context": "4.10.1",
 		"react-native-screens": "3.31.1",
